--- a/Lab10/Source/MongoRestApplication/index.html
+++ b/Lab10/Source/MongoRestApplication/index.html
@@ -130,11 +130,11 @@
 				                    <form  role="form" action="home.html" method="post" class="login-form" onsubmit="return validataionn()"/>
 				                    	<div class="form-group">
 				                    		<label class="sr-only" for="form-username">Username</label>
-				                        	<input type="text" name="form-username" placeholder="Enter Username..." class="form-username form-control" id="form-username">
+				                        	<input type="text" name="form-username" placeholder="Enter Username" class="form-username form-control" id="form-username">
 				                        </div>
 				                        <div class="form-group">
 				                        	<label class="sr-only" for="form-password">Password</label>
-				                        	<input type="password" name="form-password" placeholder="Enter Password..." class="form-password form-control" id="form-password">
+				                        	<input type="password" name="form-password" placeholder="Enter Password" class="form-password form-control" id="form-password">
 				                        </div>
 				                        <button type="submit" class="btn">Sign In</button>
 				                    </form>
